src/objects/ACET_ListView_Test_Limit__mdt.object
<CustomObject>
    <description>This metadata is used to set test limits to fetch data.</description>
    <fields>
        <fullName>Iteration_Starting_Number__c</fullName>
        <description>This is used as the iteration starting number to fetch data.</description>
        <label>Iteration Starting Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Iteration_Stopping_Number__c</fullName>
        <description>This value is used as the iteration terminating value.</description>
        <label>Iteration Stopping  Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jenkins_Username__c</fullName>
        <label>Jenkins Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACET ListView Test Limit</label>
    <pluralLabel>ACET ListView Test Limits</pluralLabel>
</CustomObject>